compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FieldWithoutName.kt
// SimpleClass

// KTIJ-25335
class SimpleClass {
    val
}
